--- a/templates/accounts/bookingconfirm.html
+++ b/templates/accounts/bookingconfirm.html
@@ -53,41 +53,41 @@
               <h4 class="card-title text-white  " style="font-family:  serif"  >Hello {{user_info.username}},<br> </h4>
 
                {% if booking_info.slot_time == "6"  %}
-          <th scope="row" style=" padding-top: 2px;"><h5 style=" font-size:19px; margin-bottom:0"><b><p class="card-text text-white" ><h5 class="text-white">Are you sure you want to reserve Slot {{booking_info.slot_time}}:00 AM on {{booking_info.date}} at "{{booking_info.ground_name}}?"</h5></p> </b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 500</h6></th>
+          <th scope="row" style=" padding-top: 2px;"><h5 style=" font-size:19px; margin-bottom:0"><b><p class="card-text text-white" ><h5 class="text-white">Are you sure you want to BOOK Slot {{booking_info.slot_time}}:00 AM on {{booking_info.date}} at "{{booking_info.ground_name}}?"</h5></p> </b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 500</h6></th>
         {% elif booking_info.slot_time == "7"  %}
-          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b><p class="card-text text-white" ><h5 class="text-white">Are you sure you want to reserve Slot {{booking_info.slot_time}}:00 AM on {{booking_info.date}} at "{{booking_info.ground_name}}?"</h5></p></b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 500</h6></th>
+          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b><p class="card-text text-white" ><h5 class="text-white">Are you sure you want to BOOK Slot {{booking_info.slot_time}}:00 AM on {{booking_info.date}} at "{{booking_info.ground_name}}?"</h5></p></b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 500</h6></th>
         {% elif booking_info.slot_time == "8"  %}
-          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b><p class="card-text text-white" ><h5 class="text-white">Are you sure you want to reserve Slot {{booking_info.slot_time}}:00 AM on {{booking_info.date}} at "{{booking_info.ground_name}}?"</h5></p></b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 500</h6></th>
+          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b><p class="card-text text-white" ><h5 class="text-white">Are you sure you want to BOOK Slot {{booking_info.slot_time}}:00 AM on {{booking_info.date}} at "{{booking_info.ground_name}}?"</h5></p></b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 500</h6></th>
         {% elif booking_info.slot_time == "9"  %}
-          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b><p class="card-text text-white" ><h5 class="text-white">Are you sure you want to reserve Slot {{booking_info.slot_time}}:00 AM on {{booking_info.date}} at "{{booking_info.ground_name}}?"</h5></p></b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 500</h6></th>
+          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b><p class="card-text text-white" ><h5 class="text-white">Are you sure you want to BOOK Slot {{booking_info.slot_time}}:00 AM on {{booking_info.date}} at "{{booking_info.ground_name}}?"</h5></p></b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 500</h6></th>
         {% elif booking_info.slot_time == "10"  %}
-          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b><p class="card-text text-white" ><h5 class="text-white">Are you sure you want to reserve Slot {{booking_info.slot_time}}:00 AM on {{booking_info.date}} at "{{booking_info.ground_name}}?"</h5></p></b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 500</h6></th>
+          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b><p class="card-text text-white" ><h5 class="text-white">Are you sure you want to BOOK Slot {{booking_info.slot_time}}:00 AM on {{booking_info.date}} at "{{booking_info.ground_name}}?"</h5></p></b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 500</h6></th>
         {% elif booking_info.slot_time == "11"  %}
-          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b><p class="card-text text-white" ><h5 class="text-white">Are you sure you want to reserve Slot {{booking_info.slot_time}}:00 AM on {{booking_info.date}} at "{{booking_info.ground_name}}?"</h5></p></b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 500</h6></th>
+          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b><p class="card-text text-white" ><h5 class="text-white">Are you sure you want to BOOK Slot {{booking_info.slot_time}}:00 AM on {{booking_info.date}} at "{{booking_info.ground_name}}?"</h5></p></b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 500</h6></th>
         {% elif booking_info.slot_time == "12"  %}
-          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b><p class="card-text text-white" ><h5 class="text-white">Are you sure you want to reserve Slot {{booking_info.slot_time}}:00 AM on {{booking_info.date}} at "{{booking_info.ground_name}}?"</h5></p></b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 500</h6></th>
+          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b><p class="card-text text-white" ><h5 class="text-white">Are you sure you want to BOOK Slot {{booking_info.slot_time}}:00 AM on {{booking_info.date}} at "{{booking_info.ground_name}}?"</h5></p></b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 500</h6></th>
         {% elif booking_info.slot_time == "13"  %}
-          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b><p class="card-text text-white" ><h5 class="text-white">Are you sure you want to reserve Slot 01:00 PM on {{booking_info.date}} at "{{booking_info.ground_name}}?"</b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 1000</h6></th>
+          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b><p class="card-text text-white" ><h5 class="text-white">Are you sure you want to BOOK Slot 01:00 PM on {{booking_info.date}} at "{{booking_info.ground_name}}?"</b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 1000</h6></th>
         {% elif booking_info.slot_time == "14"  %}
-          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b><p class="card-text text-white" ><h5 class="text-white">Are you sure you want to reserve Slot 02:00 PM on {{booking_info.date}} at "{{booking_info.ground_name}}?"</b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 1000</h6></th>
+          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b><p class="card-text text-white" ><h5 class="text-white">Are you sure you want to BOOK Slot 02:00 PM on {{booking_info.date}} at "{{booking_info.ground_name}}?"</b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 1000</h6></th>
         {% elif booking_info.slot_time == "15"  %}
-          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b><p class="card-text text-white" ><h5 class="text-white">Are you sure you want to reserve Slot 03:00 PM on {{booking_info.date}} at "{{booking_info.ground_name}}?"</b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 1000</h6></th>
+          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b><p class="card-text text-white" ><h5 class="text-white">Are you sure you want to BOOK Slot 03:00 PM on {{booking_info.date}} at "{{booking_info.ground_name}}?"</b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 1000</h6></th>
         {% elif booking_info.slot_time == "16"  %}
-          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b><p class="card-text text-white" ><h5 class="text-white">Are you sure you want to reserve Slot 04:00 PM on {{booking_info.date}} at "{{booking_info.ground_name}}?"</b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 1000</h6></th>
+          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b><p class="card-text text-white" ><h5 class="text-white">Are you sure you want to BOOK Slot 04:00 PM on {{booking_info.date}} at "{{booking_info.ground_name}}?"</b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 1000</h6></th>
         {% elif booking_info.slot_time == "17"  %}
-          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b><p class="card-text text-white" ><h5 class="text-white">Are you sure you want to reserve Slot 05:00 PM on {{booking_info.date}} at "{{booking_info.ground_name}}?"</b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 1000</h6></th>
+          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b><p class="card-text text-white" ><h5 class="text-white">Are you sure you want to BOOK Slot 05:00 PM on {{booking_info.date}} at "{{booking_info.ground_name}}?"</b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 1000</h6></th>
         {% elif booking_info.slot_time == "18"  %}
-          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b><p class="card-text text-white" ><h5 class="text-white">Are you sure you want to reserve Slot 06:00 PM on {{booking_info.date}} at "{{booking_info.ground_name}}?"</b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 1000</h6></th>
+          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b><p class="card-text text-white" ><h5 class="text-white">Are you sure you want to BOOK Slot 06:00 PM on {{booking_info.date}} at "{{booking_info.ground_name}}?"</b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 1000</h6></th>
         {% elif booking_info.slot_time == "19"  %}
-          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b><p class="card-text text-white" ><h5 class="text-white">Are you sure you want to reserve Slot 07:00 PM on {{booking_info.date}} at "{{booking_info.ground_name}}?"</b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 1000</h6></th>
+          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b><p class="card-text text-white" ><h5 class="text-white">Are you sure you want to BOOK Slot 07:00 PM on {{booking_info.date}} at "{{booking_info.ground_name}}?"</b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 1000</h6></th>
         {% elif booking_info.slot_time == "20"  %}
-          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b><p class="card-text text-white" ><h5 class="text-white">Are you sure you want to reserve Slot 08:00 PM on {{booking_info.date}} at "{{booking_info.ground_name}}?"</b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 1000</h6></th>
+          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b><p class="card-text text-white" ><h5 class="text-white">Are you sure you want to BOOK Slot 08:00 PM on {{booking_info.date}} at "{{booking_info.ground_name}}?"</b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 1000</h6></th>
         {% elif booking_info.slot_time == "21"  %}
-          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b><p class="card-text text-white" ><h5 class="text-white">Are you sure you want to reserve Slot 09:00 PM on {{booking_info.date}} at "{{booking_info.ground_name}}?"</b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 1000</h6></th>
+          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b><p class="card-text text-white" ><h5 class="text-white">Are you sure you want to BOOK Slot 09:00 PM on {{booking_info.date}} at "{{booking_info.ground_name}}?"</b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 1000</h6></th>
         {% elif booking_info.slot_time == "22"  %}
-          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b><p class="card-text text-white" ><h5 class="text-white">Are you sure you want to reserve Slot 10:00 PM on {{booking_info.date}} at "{{booking_info.ground_name}}?"</b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 1000</h6></th>
+          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b><p class="card-text text-white" ><h5 class="text-white">Are you sure you want to BOOK Slot 10:00 PM on {{booking_info.date}} at "{{booking_info.ground_name}}?"</b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 1000</h6></th>
         {% elif booking_info.slot_time == "23"  %}
-          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b><p class="card-text text-white" ><h5 class="text-white">Are you sure you want to reserve Slot 11:00 PM on {{booking_info.date}} at "{{booking_info.ground_name}}?"</b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 1000</h6></th>
+          <th scope="row" style=" padding-top: 2px ;"><h5 style=" font-size:19px; margin-bottom:0"><b><p class="card-text text-white" ><h5 class="text-white">Are you sure you want to BOOK Slot 11:00 PM on {{booking_info.date}} at "{{booking_info.ground_name}}?"</b></h5><h6 style="font-size:13px; margin-bottom:0; font-family: Courier New; color:#C5F0F2;">Rs 1000</h6></th>
 
         {% else %}
 
@@ -104,6 +104,83 @@
             </div>
           </div>
         </div>
+ <style>
+            #contact-container {
+                position: fixed;
+                bottom: 20px;
+                left: 10px;
+
+            }
+
+            #contact-button {
+                padding: 0px;
+                border: none;
+                border-radius: 6px;
+                background-color: #373737;
+                color: #fff;
+                cursor: pointer;
+                transition: transform 0.2s;
+            }
+
+            #contact-button:hover {
+                transform: scale(1.1);
+            }
+
+            #contact-popup {
+                background-color: #222222;
+                display:flex;
+                position: fixed;
+                width: 100%;
+                bottom: 0;
+                left: 0;
+                height: 8%;
+                color:white;
+                border-radius: 10px;
+                box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+                visibility: hidden;
+                opacity: 0;
+                transition: visibility 0s, opacity 0.7s linear;
+            }
+
+            #contact-container.show-popup #contact-popup {
+                visibility: visible;
+                opacity: 1;
+            }
+        </style>
+
+ <div id="contact-container">
+            <button id="contact-button">Contact Us</button>
+            <div id="contact-popup" class="" style="justify-content:space-between">
+                <div style="margin:5px;background-color:#3b3b3b">
+                <h5 style="font-size:1rem;margin:0px; padding:3px;">For support: </h5>
+
+                <a href="https://wa.me/+918625877270" style="color:white;padding-top:3px; ">Connect through whatsapp</a>
+                </div>
+
+                <div style="margin:5px; background-color:#3b3b3b">
+                <h5 style="font-size:1rem; margin-bottom:0px;padding:2px;">To register your turf. </h5>
+
+                <h6 style="font-size:1rem; margin-bottom:0px;padding:2px;text-align:right;">Call : 8625877270 </h6>
+                </div>
+            </div>
+        </div>
+
+   <script type="text/javascript">
+            const contactButton = document.getElementById("contact-button");
+                    const contactContainer = document.getElementById("contact-container");
+                    const contactPopup = document.getElementById("contact-popup");
+
+                    contactButton.addEventListener("click", () => {
+                        contactContainer.classList.toggle("show-popup");
+                    });
+
+                    document.addEventListener("click", (event) => {
+                        console.log(event.target)
+                        if (!contactContainer.contains(event.target) && contactPopup.style.opacity == 0) {
+                            contactContainer.classList.remove("show-popup");
+                        }
+                    });
+        </script>
       </div>
      
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
