--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -91,7 +91,7 @@
   
           <div class="card bg-glass login-box">
             <div class="card-body px-4 py-5 px-md-5">
-              <h6 style="color: hsl(219, 71%, 57%)">Kindly enter your details </h6>
+              <h6 style="color: hsl(219, 71%, 57%)">Login Here </h6>
               <form name="login" method="post" action=""> 
                 <!-- 2 column grid layout with text inputs for the first and last names -->
                 <div class="row">
